[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry]
name = "CyInstaller"
version = "1.1.1"
description = "A cli tool to package application with Cython & PyInstaller."
authors = ["SolardiaX <solardiax@hotmail.com>"]
maintainers = ["SolardiaX <solardiax@hotmail.com>"]
license = "GPL-3.0-or-later"
readme="README.rst"
repository="https://github.com/SolardiaX/CyInstaller"
homepage="https://github.com/SolardiaX/CyInstaller"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
include = [
    "LICENSE.rst"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
Cython = "^0.29.21"
pyinstaller = "^4.1"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
bcrypt = "^3.2.0"
cryptography = "^3.2.1"
email-validator = "^1.1.2"
flask = "^1.1.2"
flask-security-too = "^3.4.4"
pony = "^0.7.14"
waitress = "^1.4.4"
python-dotenv = "^0.15.0"
packaging = "^20.7"
sphinx = "^3.3.1"
sphinx-issues = "^1.2.0"
sphinx-material = "^0.0.32"
sphinxcontrib-log-cabinet = "^1.0.1"

[tool.poetry.scripts]
CyInstaller = "CyInstaller.__main__:build_command"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
