[metadata]
name = CyInstaller
# Version needs regex in setup.py.
url = https://github.com/solardiax/cyinstaller
project_urls =
    Documentation = https://github.com/solardiax/cyinstaller
    Code = https://github.com/solardiax/cyinstaller
    Issue tracker = https://github.com/solardiax/cyinstaller/issues
license = GPL-3.0-or-later
author = SolardiaX
author_email = solardiax@hotmail.com
maintainer = SolardiaX
maintainer_email = solardiax@hotmail.com
description = A cli tool to package application with Cython & PyInstaller.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Installation/Setup
    Topic :: System :: Software Distribution
    Topic :: Utilities

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.package_data]
* = *.spec

[options.entry_points]
console_scripts =
    cyinstaller = CyInstaller.__main__:build_command
